--- a/GamothequeWPF/packages.config
+++ b/GamothequeWPF/packages.config
@@ -40,4 +40,6 @@
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net472" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net472" />
+  <package id="WPFToolkit" version="3.5.50211.1" targetFramework="net472" />
+  <package id="WPFToolkit.DataVisualization" version="3.5.50211.1" targetFramework="net472" />
 </packages>
